# canary-rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md
examples/: decoder_smoke.rs  inspect_model.rs  live.rs  transcribe.rs
examples/shared/: utils.rs
src/: audio.rs  execution.rs  lib.rs  model.rs  session.rs  stream.rs  types.rs
tests/: integration_test.rs
