[package]
name = "canary-rs"
version = "0.1.0"
edition = "2024"
description = "Rust implementation of NVIDIA Canary-1b-v2 ASR/AST using ONNX Runtime"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mmende/canary-rs"
keywords = ["speech-recognition", "asr", "onnx", "onnxruntime", "audio"]

[lib]
name = "canary_rs"
path = "src/lib.rs"

[dependencies]
ort = { version = "2.0.0-rc.11" }
hound = "3.5"
ndarray = "0.17.2"
thiserror = "2.0"
rubato = "1.0.0"
audioadapter-buffers = "2.0"
parakeet-rs = { version = "0.2.9", optional = true }
rustfft = "6.2"
log = "0.4"

[dev-dependencies]
cpal = "0.17.1"

[features]
default = ["cpu", "ort-defaults"]
cpu = []
ort-defaults = ["ort/default"]
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
coreml = ["ort/coreml"]
directml = ["ort/directml"]
rocm = ["ort/rocm"]
openvino = ["ort/openvino"]
webgpu = ["ort/webgpu"]
nnapi = ["ort/nnapi"]
load-dynamic = ["ort/load-dynamic"]
preload-dylibs = ["ort/preload-dylibs"]
