[package]
name = "canary-rs"
version = "0.2.1"
edition = "2024"
description = "Rust implementation of NVIDIA Canary ASR/AST using ONNX Runtime"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mmende/canary-rs"
keywords = ["speech-recognition", "asr", "onnx", "onnxruntime", "audio"]

[lib]
name = "canary_rs"
path = "src/lib.rs"

[dependencies]
ort = { version = "2.0.0-rc.12" }
hound = "3.5.1"
ndarray = "0.17.2"
thiserror = "2.0.18"
rubato = "2.0.0"
audioadapter-buffers = "3.0.0"
rustfft = "6.2"
log = "0.4"

[dev-dependencies]
cpal = "0.17.3"

[[example]]
name = "live"
path = "examples/live.rs"

[[example]]
name = "transcribe"
path = "examples/transcribe.rs"

[[example]]
name = "inspect_model"
path = "examples/inspect_model.rs"

[[example]]
name = "decoder_smoke"
path = "examples/decoder_smoke.rs"

[features]
default = ["cpu", "ort-defaults"]
cpu = []
ort-defaults = ["ort/default"]
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
coreml = ["ort/coreml"]
directml = ["ort/directml"]
rocm = ["ort/rocm"]
openvino = ["ort/openvino"]
webgpu = ["ort/webgpu"]
nnapi = ["ort/nnapi"]
load-dynamic = ["ort/load-dynamic"]
preload-dylibs = ["ort/preload-dylibs"]
